versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Function1ds.h

// --- Const-aware handles.
typedef const struct Function1dsClass *const ConstHandle2ConstFunction1ds;
typedef       struct Function1dsClass *const ConstHandle2Function1ds;
typedef const struct Function1dsClass *      Handle2ConstFunction1ds;
typedef       struct Function1dsClass *      Handle2Function1ds;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstFunction1ds
Function1dsDefaultConst();
// +++ Create, default
extern_c Handle2Function1ds
Function1dsDefault();
// --- Create, general, const
extern_c Handle2ConstFunction1ds
Function1dsCreateConst(
   ConstHandle2Legendre *const Legendre, const size_t LegendreSize,
   ConstHandle2XYs1d *const XYs1d, const size_t XYs1dSize,
   ConstHandle2Regions1d *const regions1d, const size_t regions1dSize
);
// +++ Create, general
extern_c Handle2Function1ds
Function1dsCreate(
   ConstHandle2Legendre *const Legendre, const size_t LegendreSize,
   ConstHandle2XYs1d *const XYs1d, const size_t XYs1dSize,
   ConstHandle2Regions1d *const regions1d, const size_t regions1dSize
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
Function1dsAssign(ConstHandle2Function1ds self, ConstHandle2ConstFunction1ds from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
Function1dsDelete(ConstHandle2ConstFunction1ds self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
Function1dsRead(ConstHandle2Function1ds self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
Function1dsWrite(ConstHandle2ConstFunction1ds self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
Function1dsPrint(ConstHandle2ConstFunction1ds self);
// +++ Print to standard output, as XML
extern_c int
Function1dsPrintXML(ConstHandle2ConstFunction1ds self);
// +++ Print to standard output, as JSON
extern_c int
Function1dsPrintJSON(ConstHandle2ConstFunction1ds self);
// -----------------------------------------------------------------------------
// Child: Legendre
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Function1dsLegendreHas(ConstHandle2ConstFunction1ds self);
// +++ Clear
extern_c void
Function1dsLegendreClear(ConstHandle2Function1ds self);
// +++ Size
extern_c size_t
Function1dsLegendreSize(ConstHandle2ConstFunction1ds self);
// +++ Add
extern_c void
Function1dsLegendreAdd(ConstHandle2Function1ds self, ConstHandle2ConstLegendre Legendre);
// --- Get, by index \in [0,size), const
extern_c Handle2ConstLegendre
Function1dsLegendreGetConst(ConstHandle2ConstFunction1ds self, const size_t index_);
// +++ Get, by index \in [0,size)
extern_c Handle2Legendre
Function1dsLegendreGet(ConstHandle2Function1ds self, const size_t index_);
// +++ Set, by index \in [0,size)
extern_c void
Function1dsLegendreSet(
   ConstHandle2Function1ds self,
   const size_t index_,
   ConstHandle2ConstLegendre Legendre
);
// +++ Has, by outerDomainValue
extern_c int
Function1dsLegendreHasByOuterDomainValue(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// --- Get, by outerDomainValue, const
extern_c Handle2ConstLegendre
Function1dsLegendreGetByOuterDomainValueConst(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// +++ Get, by outerDomainValue
extern_c Handle2Legendre
Function1dsLegendreGetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue
);
// +++ Set, by outerDomainValue
extern_c void
Function1dsLegendreSetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue,
   ConstHandle2ConstLegendre Legendre
);
// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Function1dsXYs1dHas(ConstHandle2ConstFunction1ds self);
// +++ Clear
extern_c void
Function1dsXYs1dClear(ConstHandle2Function1ds self);
// +++ Size
extern_c size_t
Function1dsXYs1dSize(ConstHandle2ConstFunction1ds self);
// +++ Add
extern_c void
Function1dsXYs1dAdd(ConstHandle2Function1ds self, ConstHandle2ConstXYs1d XYs1d);
// --- Get, by index \in [0,size), const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetConst(ConstHandle2ConstFunction1ds self, const size_t index_);
// +++ Get, by index \in [0,size)
extern_c Handle2XYs1d
Function1dsXYs1dGet(ConstHandle2Function1ds self, const size_t index_);
// +++ Set, by index \in [0,size)
extern_c void
Function1dsXYs1dSet(
   ConstHandle2Function1ds self,
   const size_t index_,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by label
extern_c int
Function1dsXYs1dHasByLabel(
   ConstHandle2ConstFunction1ds self,
   const char *const label
);
// --- Get, by label, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByLabelConst(
   ConstHandle2ConstFunction1ds self,
   const char *const label
);
// +++ Get, by label
extern_c Handle2XYs1d
Function1dsXYs1dGetByLabel(
   ConstHandle2Function1ds self,
   const char *const label
);