versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Function1ds.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalFunction1ds
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function Function1dsDefaultConst() &
      bind(C, name='Function1dsDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function Function1dsDefaultConst

!! Create, default
function Function1dsDefault() &
      bind(C, name='Function1dsDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function Function1dsDefault

!! Create, general, const
function Function1dsCreateConst( &
   Legendre, LegendreSize, &
   XYs1d, XYs1dSize, &
   regions1d, regions1dSize &
) &
      bind(C, name='Function1dsCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: LegendreSize
   type(c_ptr) :: Legendre(LegendreSize)
   integer(c_size_t), value :: XYs1dSize
   type(c_ptr) :: XYs1d(XYs1dSize)
   integer(c_size_t), value :: regions1dSize
   type(c_ptr) :: regions1d(regions1dSize)
   type(c_ptr) :: handle
end function Function1dsCreateConst

!! Create, general
function Function1dsCreate( &
   Legendre, LegendreSize, &
   XYs1d, XYs1dSize, &
   regions1d, regions1dSize &
) &
      bind(C, name='Function1dsCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: LegendreSize
   type(c_ptr) :: Legendre(LegendreSize)
   integer(c_size_t), value :: XYs1dSize
   type(c_ptr) :: XYs1d(XYs1dSize)
   integer(c_size_t), value :: regions1dSize
   type(c_ptr) :: regions1d(regions1dSize)
   type(c_ptr) :: handle
end function Function1dsCreate

!! Assign
subroutine Function1dsAssign(handleLHS, handleRHS) &
      bind(C, name='Function1dsAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine Function1dsAssign

!! Delete
subroutine Function1dsDelete(handle) &
      bind(C, name='Function1dsDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine Function1dsDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function Function1dsRead(handle, filename, filenameSize) &
      bind(C, name='Function1dsRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function Function1dsRead

!! Write to file
function Function1dsWrite(handle, filename, filenameSize) &
      bind(C, name='Function1dsWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function Function1dsWrite

!! Print to standard output, in our prettyprinting format
function Function1dsPrint(handle) &
      bind(C, name='Function1dsPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Function1dsPrint

!! Print to standard output, as XML
function Function1dsPrintXML(handle) &
      bind(C, name='Function1dsPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Function1dsPrintXML

!! Print to standard output, as JSON
function Function1dsPrintJSON(handle) &
      bind(C, name='Function1dsPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Function1dsPrintJSON


!! -----------------------------------------------------------------------------
!! Child: Legendre
!! -----------------------------------------------------------------------------

!! Has
function Function1dsLegendreHas(handle) &
      bind(C, name='Function1dsLegendreHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function Function1dsLegendreHas

!! Clear
subroutine Function1dsLegendreClear(handle) &
      bind(C, name='Function1dsLegendreClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine Function1dsLegendreClear

!! Size
function Function1dsLegendreSize(handle) &
      bind(C, name='Function1dsLegendreSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function Function1dsLegendreSize

!! Add
subroutine Function1dsLegendreAdd(handle, fieldHandle) &
      bind(C, name='Function1dsLegendreAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsLegendreAdd

!! Get, by index \in [0,size), const
function Function1dsLegendreGetConst(handle, index) &
      bind(C, name='Function1dsLegendreGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsLegendreGetConst

!! Get, by index \in [0,size)
function Function1dsLegendreGet(handle, index) &
      bind(C, name='Function1dsLegendreGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsLegendreGet

!! Set, by index \in [0,size)
subroutine Function1dsLegendreSet(handle, index, fieldHandle) &
      bind(C, name='Function1dsLegendreSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsLegendreSet

!! ------------------------
!! Re: metadatum outerDomainValue
!! ------------------------

!! Has, by outerDomainValue
function Function1dsLegendreHasByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsLegendreHasByOuterDomainValue') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   integer(c_int) :: has
end function Function1dsLegendreHasByOuterDomainValue

!! Get, by outerDomainValue, const
function Function1dsLegendreGetByOuterDomainValueConst(handle, meta) &
      bind(C, name='Function1dsLegendreGetByOuterDomainValueConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsLegendreGetByOuterDomainValueConst

!! Get, by outerDomainValue
function Function1dsLegendreGetByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsLegendreGetByOuterDomainValue') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsLegendreGetByOuterDomainValue

!! Set, by outerDomainValue
subroutine Function1dsLegendreSetByOuterDomainValue(handle, meta, fieldHandle) &
      bind(C, name='Function1dsLegendreSetByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsLegendreSetByOuterDomainValue


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function Function1dsXYs1dHas(handle) &
      bind(C, name='Function1dsXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function Function1dsXYs1dHas

!! Clear
subroutine Function1dsXYs1dClear(handle) &
      bind(C, name='Function1dsXYs1dClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine Function1dsXYs1dClear

!! Size
function Function1dsXYs1dSize(handle) &
      bind(C, name='Function1dsXYs1dSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function Function1dsXYs1dSize

!! Add
subroutine Function1dsXYs1dAdd(handle, fieldHandle) &
      bind(C, name='Function1dsXYs1dAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dAdd

!! Get, by index \in [0,size), const
function Function1dsXYs1dGetConst(handle, index) &
      bind(C, name='Function1dsXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetConst

!! Get, by index \in [0,size)
function Function1dsXYs1dGet(handle, index) &
      bind(C, name='Function1dsXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGet

!! Set, by index \in [0,size)
subroutine Function1dsXYs1dSet(handle, index, fieldHandle) &
      bind(C, name='Function1dsXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSet

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function Function1dsXYs1dHasByLabel(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dHasByLabel') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function Function1dsXYs1dHasByLabel

!! Get, by label, const
function Function1dsXYs1dGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByLabelConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByLabelConst

!! Get, by label
function Function1dsXYs1dGetByLabel(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByLabel') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByLabel
